fixed glitch with too long caption line

--- a/_attachments/css/template_create.css
+++ b/_attachments/css/template_create.css
@@ -386,6 +386,8 @@
     #manager-page input[type="text"] {padding:10px;}
     #manager-page input.wizard-lg,
     #manager-page textarea.wizard-lg {padding:10px;width:570px;}
+    #manager-page input.wizard-st,
+    #manager-page textarea.wizard-st {padding:10px;width:250px;}
     #instructions				{margin:18px 0;padding:20px;background-color:#e3e3e3;z-index:9999;}
     #information				{margin-top:18px;margin-bottom:18px;}
     .sidebar					{padding-top:18px;width:340px;float:left;}
